--- a/start/package.json
+++ b/start/package.json
@@ -5,6 +5,7 @@
   "main": "setup.js",
   "scripts": {
     "start": "lite-server --baseDir=\"public\"",
+    "postinstall": "npm run setup",
     "setup": "node setup.js",
     "update": "node update.js"
   },
