Update command to "update-data" make it obvious command it not a built-in npm command

--- a/end/package.json
+++ b/end/package.json
@@ -7,7 +7,7 @@
     "start": "lite-server --baseDir=\"public\"",
     "postinstall": "npm run setup",
     "setup": "node setup.js",
-    "update": "node update.js"
+    "update-data": "node update.js"
   },
   "license": "MIT",
   "repository": {
