--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,8 @@
 				"ms-azuretools.vscode-azurestaticwebapps",
 				"esbenp.prettier-vscode",
 				"dbaeumer.vscode-eslint",
+				"GitHub.copilot",
+				"GitHub.copilot-chat"
 			]
 		}
 		// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
