--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/diberry/mslearn-advocates.azure-functions-and-signalr/issues"
   },
   "homepage": "https://github.com/diberry/mslearn-advocates.azure-functions-and-signalr#readme",
-  "dependencies": {
+  "devDependencies": {
+    "parcel": "^2.12.0"
   }
 }
