--- a/client-start/package.json
+++ b/client-start/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "serve dist",
     "start:dev": "webpack serve --mode development",
+    "prestart": "npm run clean && npm run build",
     "build": "webpack",
     "clean": "rimraf dist"
   },
