--- a/setup-resources/package.json
+++ b/setup-resources/package.json
@@ -5,10 +5,8 @@
     "scripts": {
         "start": "npm run setup:start && npm run upload",
         "prestart": "npm run clean && npm run build",
-
         "clean": "rimraf dist",
         "build": "tsc",
-
         "setup:start": "bash create-start-resources.sh",
         "setup:signalr": "bash create-signalr-resources.sh",
         "upload": "node dist/upload.js"
@@ -20,6 +18,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.11.30",
-        "rimraf": "^5.0.5"
+        "rimraf": "^5.0.5",
+        "typescript": "^5.4.3"
     }
 }
