--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 				"esbenp.prettier-vscode",
 				"dbaeumer.vscode-eslint",
 				"GitHub.copilot",
-				"GitHub.copilot-chat"
+				"GitHub.copilot-chat",
+				"ms-azuretools.vscode-azureresourcegroups"
 			]
 		}
 		// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
