--- a/server-end/package.json
+++ b/server-end/package.json
@@ -14,10 +14,10 @@
     "@azure/functions": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.x",
+    "@types/node": "^18.19.29",
     "azure-functions-core-tools": "^4.0.5611",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "typescript": "^4.0.0"
   },
   "main": "dist/src/functions/*.js"
 }
