--- a/.github/workflows/main_signalr-3.yml
+++ b/.github/workflows/main_signalr-3.yml
@@ -29,7 +29,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd './${{ env.ZIP_PACKAGE_PATH }}/${{ end.AZURE_FUNCTIONAPP_SERVER_PACKAGE_PATH}}'
+          pushd './${{ env.ZIP_PACKAGE_PATH }}/${{ env.AZURE_FUNCTIONAPP_SERVER_PACKAGE_PATH}}'
           npm install
           npm run build --if-present
           npm run test --if-present
