--- a/.github/workflows/main_signalr-3.yml
+++ b/.github/workflows/main_signalr-3.yml
@@ -10,8 +10,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_SERVER_PACKAGE_PATH: 'server-end' # set this to the path to your web app project, defaults to the repository root
-  ZIP_PACKAGE_PATH: '.'
+  PACKAGE_PATH: 'server-end' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -29,10 +29,15 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd './${{ env.ZIP_PACKAGE_PATH }}/${{ env.AZURE_FUNCTIONAPP_SERVER_PACKAGE_PATH}}'
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH}}'
           npm install
           npm run build --if-present
           npm run test --if-present
+          popd
+
+      - name: Zip artifact for deployment
+        run: |
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH}}'
           zip -r ../release.zip .
           popd
         
@@ -73,5 +78,5 @@ jobs:
         with:
           app-name: 'signalr-3'
           slot-name: 'Production'
-          package: ${{ env.ZIP_PACKAGE_PATH }}
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH
           
