--- a/.github/workflows/main_signalr-3.yml
+++ b/.github/workflows/main_signalr-3.yml
@@ -78,5 +78,5 @@ jobs:
         with:
           app-name: 'signalr-3'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
