--- a/.github/workflows/dfberry-0410-fixes-and-deploy_api-dfberry.yml
+++ b/.github/workflows/dfberry-0410-fixes-and-deploy_api-dfberry.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - dfberry/0410-fixes-and-deploy
+    paths:
+      - 'server-end/**'
   workflow_dispatch:
 
 env:
