--- a/client-end/package.json
+++ b/client-end/package.json
@@ -7,7 +7,7 @@
     "start": "serve dist",
     "start:dev": "webpack serve --mode development",
     "prestart": "npm run clean && npm run build",
-    "build": "webpack --mode development",
+    "build": "webpack --env BACKEND_URL=BACKEND_URL --mode development",
     "clean": "rimraf dist"
   },
   "author": "",
