--- a/client-end/package.json
+++ b/client-end/package.json
@@ -7,7 +7,7 @@
     "start": "serve dist",
     "start:dev": "webpack serve --mode development",
     "prestart": "npm run clean && npm run build",
-    "build": "webpack --env BACKEND_URL=BACKEND_URL --mode development",
+    "build": "cross-env BACKEND_URL=$BACKEND_URL webpack --mode development",
     "clean": "rimraf dist"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.24.3",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
