--- a/server-end/tsconfig.json
+++ b/server-end/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "dist",
     "rootDir": ".",
     "sourceMap": true,
-    "strict": false
-  }
+    "strict": false,
+    "allowJs": true,
+    "resolveJsonModule": true,
+  },
+  "include": ["src/**/*.ts", "src/**/*.json"],
 }
