--- a/.github/workflows/main_api-jamie.yml
+++ b/.github/workflows/main_api-jamie.yml
@@ -6,12 +6,13 @@ name: Build and deploy Node.js project to Azure Function App - api-jamie
 on:
   push:
     branches:
-      - main
+      - dfberry/0416-2
   workflow_dispatch:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  PACKAGE_PATH: 'start/server'
 
 jobs:
   build:
@@ -28,14 +29,17 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ PACKAGE_PATH}}'
           npm install
           npm run build --if-present
           npm run test --if-present
           popd
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ PACKAGE_PATH}}'
+          zip -r ../release.zip .
+          popd
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
