--- a/.github/workflows/main_api-jamie.yml
+++ b/.github/workflows/main_api-jamie.yml
@@ -34,13 +34,14 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          rm -rf node_modules
           popd
 
       - name: Zip artifact for deployment
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH }}'
           ls -la
-          zip -r release.zip .
+          zip -r ../release.zip .
           popd
           ls -la
 
@@ -48,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH }}/release.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
