--- a/.github/workflows/main_api-jamie.yml
+++ b/.github/workflows/main_api-jamie.yml
@@ -40,7 +40,8 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           ls -la
-          zip -r release.zip ./${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH }}
+          echo "zipping"
+          zip -r release.zip ./${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH }}/
           ls -la
 
       - name: Upload artifact for deployment job
