--- a/.github/workflows/main_diberry-signalr-server.yml
+++ b/.github/workflows/main_diberry-signalr-server.yml
@@ -1,18 +1,17 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js project to Azure Function App - api-jamie
+name: Build and deploy Node.js project to Azure Function App - diberry-signalr-server
 
 on:
   push:
     branches:
-      - dfberry/0416-2
+      - main
   workflow_dispatch:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
-  PACKAGE_PATH: 'solution/server'
 
 jobs:
   build:
@@ -29,28 +28,20 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH }}'
-          ls -la
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
           npm run build --if-present
           npm run test --if-present
-          ls -la
           popd
 
       - name: Zip artifact for deployment
-        run: |
-          ls -la
-          echo "zipping"
-          zip -r release.zip ./${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/${{ env.PACKAGE_PATH }}/
-          rm -rf node_modules
-          ls -la
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
           path: release.zip
-
 
   deploy:
     runs-on: ubuntu-latest
@@ -73,15 +64,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D810AAE223B944DAB5BE10C3C7BD2517 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B50AC9A10C2043CF8659AB1430C99691 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A1EE22F1D9DD426783AF476510834AC2 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_25BF666872734E75BC9FD1443B5C5E7B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_587FC39D934A47748B05A0846A0348BD }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_989B6C8EE46F4A5BB877B035715DB5E6 }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'api-jamie'
+          app-name: 'diberry-signalr-server'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
