--- a/.github/workflows/main_api-manoj.yml
+++ b/.github/workflows/main_api-manoj.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: server
+name: Server
 
 on:
   push:
